--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# github archive
-github/
-
 # ffinder records
 bak_ffinder.pl/
 ffinder_baker.bat
+
+# Updates
+updates.txt
 
 # ffinder trial files
 ffinder_size.txt
